# tide

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ci-output-examples.md  design-spec.md
scripts/readme/: regenerate_transcript.py
tests/integration/: test_cli_nontrivial.py  test_transaction_rollback.py
tests/unit/: test_config.py  test_installer.py  test_naming.py  test_render.py  test_stack_inference.py
tide/: __init__.py
tide/cli/: main.py
tide/config/: settings.py
tide/core/: errors.py  models.py  service.py  stack.py  transactions.py
tide/forge/: base.py  github.py  local.py
tide/git/: repo.py
tide/installer/: __init__.py  manager.py
tide/plugins/: registry.py
tide/storage/: cache.py
tide/tui/: render.py
